# OpenWebUI-KB-Manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
kbmanager/: api_interface.py  app_logic.py  config_manager.py  exceptions.py  kbignore_parser.py  main.py  setup_wizard.py  utils.py
kbmanager/open_web_ui_client/: __init__.py
kbmanager/open_web_ui_client/api/audio/: get_audio_config_api_v1_audio_config_get.py  get_models_api_v1_audio_models_get.py  get_voices_api_v1_audio_voices_get.py  speech_api_v1_audio_speech_post.py  transcription_api_v1_audio_transcriptions_post.py  update_audio_config_api_v1_audio_config_update_post.py
kbmanager/open_web_ui_client/api/auths/: add_user_api_v1_auths_add_post.py  delete_api_key_api_v1_auths_api_key_delete.py  generate_api_key_api_v1_auths_api_key_post.py  get_admin_config_api_v1_auths_admin_config_get.py  get_admin_details_api_v1_auths_admin_details_get.py  get_api_key_api_v1_auths_api_key_get.py  get_ldap_config_api_v1_auths_admin_config_ldap_get.py  get_ldap_server_api_v1_auths_admin_config_ldap_server_get.py  get_session_user_api_v1_auths_get.py  ldap_auth_api_v1_auths_ldap_post.py  signin_api_v1_auths_signin_post.py  signout_api_v1_auths_signout_get.py  (+6 more)
kbmanager/open_web_ui_client/models/: __init__.py  add_memory_form.py  add_pipeline_form.py  add_user_form.py  admin_config.py  api_key.py  audio_config_update_form.py  automatic_1111_config_form.py  azure_open_ai_config_form.py  banner_model.py  batch_process_files_form.py  batch_process_files_response.py  batch_process_files_result.py  body_transcription_api_v1_audio_transcriptions_post.py  body_upload_file_api_v1_files_post.py  body_upload_file_api_v1_files_post_metadata_type_0.py  body_upload_model_ollama_models_upload_post.py  body_upload_model_ollama_models_upload_url_idx_post.py  body_upload_pipeline_api_v1_pipelines_upload_post.py  channel_form.py  channel_form_access_control_type_0.py  channel_form_data_type_0.py  channel_form_meta_type_0.py  channel_model.py  channel_model_access_control_type_0.py  channel_model_data_type_0.py  channel_model_meta_type_0.py  chat_action_api_chat_actions_action_id_post_form_data.py  chat_completed_api_chat_completed_post_form_data.py  chat_completion_api_chat_completions_post_form_data.py  chat_folder_id_form.py  chat_form.py  chat_form_chat.py  chat_permissions.py  chat_response.py  chat_response_chat.py  chat_response_meta.py  chat_title_id_response.py  chat_title_messages_form.py  chat_title_messages_form_messages_item.py  (+205 more)
tests/: conftest.py  test_app_logic.py  test_config_manager.py  test_exceptions.py  test_integration.py  test_kbignore_parser.py  test_main.py  test_setup_wizard.py
(+274 files in other folders)
