[project]
name = "kb-manager"
version = "0.1.0"
description = "A CLI tool for managing files and knowledge bases in OpenWebUI."
authors = [{ name = "Herman Haggerty", email = "herman.haggerty@hemrantech.com" }]
dependencies = [
    "click",
    "httpx",
    "pyyaml",
    "tqdm",
    "pathspec",
    "requests>=2.32.4",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
kb-manager = "kbmanager.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["kbmanager"]
omit = ["*/tests/*", "*/open_web_ui_client/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
